[java] Fixing Java 8 incompatibilities in tests